--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <div class="profile">V</div>
             <h1>vikash</h1>
 
-            <input class="price-name-vikash" type="text" placeholder="Enter quantity">
+            <input class="price-name-vikash" type="text" placeholder="Enter user">
             <input class="price-vikash" type="number" placeholder="Enter quantity">
 
             <h2>Price: ₹<span class="show-price-vikash"></span></h2>
@@ -141,7 +141,7 @@
             <div class="profile">R</div>
             <h1>rahul</h1>
 
-            <input class="price-name-rahul" type="text" placeholder="Enter quantity">
+            <input class="price-name-rahul" type="text" placeholder="Enter user">
             <input class="price-rahul" type="number" placeholder="Enter quantity">
 
             <h2>Price: ₹<span class="show-price-rahul"></span></h2>
@@ -149,21 +149,21 @@
         </div>
 
         <div class="box">
-            <div class="profile">G</div>
-            <h1>geet</h1>
+            <div class="profile">Rh</div>
+            <h1>Rohit</h1>
 
-            <input class="price-name-geet" type="text" placeholder="Enter quantity">
-            <input class="price-geet" type="number" placeholder="Enter quantity">
+            <input class="price-name-rohit" type="text" placeholder="Enter user">
+            <input class="price-rohit" type="number" placeholder="Enter quantity">
 
-            <h2>Price: ₹<span class="show-price-geet"></span></h2>
-            <button onclick="main('geet')">Trenfer To</button>
+            <h2>Price: ₹<span class="show-price-rohit"></span></h2>
+            <button onclick="main('rohit')">Trenfer To</button>
         </div>
 
         <div class="box">
             <div class="profile">D</div>
             <h1>admin</h1>
 
-            <input class="price-name-admin" type="text" placeholder="Enter quantity">
+            <input class="price-name-admin" type="text" placeholder="Enter user">
             <input class="price-admin" type="number" placeholder="Enter quantity">
 
             <h2>Price: ₹<span class="show-price-admin"></span></h2>
@@ -174,5 +174,6 @@
     </div>
     <script src="main.js"></script>
 </body>
+
 
 </html>
